# prepare3-clean2

./: .gitignore  =18  BETTER_DATA_ORGANIZATION.md  README.md  master_todo.md  pyproject.toml  requirements.txt
adrd_models/: train.py  train_demographic.py  train_linguistic.py  train_para.py
adrd_models/linguistic/: inference.py
adrd_models/linguistic/transcription/: transcribe_audio_phi4.py
adrd_models/paralinguistic/: inference.py  train.py
linguistic_models/: README.md
linguistic_models/synthetic_data/: pytest.ini  run_tests.py  synthetic_data_generator.py
linguistic_models/synthetic_data/tests/: __init__.py  conftest.py
linguistic_models/synthetic_data/tests/unit/: __init__.py  test_integration.py  test_synthetic_data_runner.py
paralinguistic/: inference.py  train.py
paralinguistic_models/paralinguistic_data/: download_and_filter.py  feature_extraction.py  inspect_data_format.py  prep_data.py
paralinguistic_models/paralinguistic_models/: data_loader.py  test_data_loading.py  train.py
paralinguistic_models/paralinguistic_models/checkpoints/: normalization_stats.npz
paralinguistic_models/shared/: model.py
