[project]
name = "pp3"
version = "0.0.1"
description = "7 self-contained modules for ADRD detection using linguistic and paralinguistic features."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]


[tool.ruff]
line-length = 99
include = ["pyproject.toml", "*/**.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
force-sort-within-sections = true

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

